--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ li{
     padding: .5rem 2rem;
     color: #fff;
     cursor: pointer;
-    /* transition: .1s ease; */
+    transition: .1s ease;
 }
 
 .btn:hover{
@@ -270,7 +270,6 @@ li{
 .hero__item{
     font-size: 1.5rem;
     display: flex;
-    align-items: center;
     width: 80%;
     width: 100%;
     padding: 1rem 2rem;
@@ -287,7 +286,6 @@ li{
 .btn-remove{
     display: flex;
     justify-content: center;
-    align-items: center;
     background-color: transparent;
     border: none;
     flex-basis: 1;
@@ -313,16 +311,13 @@ li{
     width: 16px;
     height: 16px;
     outline: none;
-    /* position: relative; */
     z-index: 3;
-    /* top: 3px; */
-    /* order: 1; */
     margin-right: 10px;
     flex-shrink: 0;
 }
 .check:checked {
-    background: rgb(1, 163, 10);
-    background-size: contain;
+    background: rgb(1, 163, 10) url(./img/doneTask.svg) no-repeat center center;
+    background-size: cover;
     border-color: rgb(1, 163, 10);
 }
 
